Code to p130. [RED] Compile fail, possibly due to drinking Port

--- a/ch03-gallery-core/gallery-desktop/albumlistwidget.ui
+++ b/ch03-gallery-core/gallery-desktop/albumlistwidget.ui
@@ -1,7 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>AlbumListWidget</class>
  <widget class="QWidget" name="AlbumListWidget">
   <property name="geometry">
@@ -15,7 +13,31 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QFrame" name="frame">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QPushButton" name="createAlbumButton">
+        <property name="text">
+         <string>Create Album</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QListView" name="albumList"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
+  </layout>
  </widget>
- <pixmapfunction/>
+ <resources/>
  <connections/>
 </ui>
