--- a/ch03-gallery-core/gallery-desktop/albumwidget.ui
+++ b/ch03-gallery-core/gallery-desktop/albumwidget.ui
@@ -24,7 +24,7 @@
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="albumName">
         <property name="text">
          <string>TextLabel</string>
         </property>
@@ -55,7 +55,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QListView" name="listView"/>
+    <widget class="QListView" name="thumbnailListView"/>
    </item>
   </layout>
  </widget>
