--- a/ch03-gallery-core/gallery-desktop/gallerywidget.ui
+++ b/ch03-gallery-core/gallery-desktop/gallerywidget.ui
@@ -1,7 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>GalleryWidget</class>
  <widget class="QWidget" name="GalleryWidget">
   <property name="geometry">
@@ -15,7 +13,29 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <layout class="QHBoxLayout" name="horizontalLayout">
+   <item>
+    <widget class="AlbumListWidget" name="albumListWidget" native="true"/>
+   </item>
+   <item>
+    <widget class="AlbumWidget" name="albumWidget" native="true"/>
+   </item>
+  </layout>
  </widget>
- <pixmapfunction/>
+ <customwidgets>
+  <customwidget>
+   <class>AlbumListWidget</class>
+   <extends>QWidget</extends>
+   <header>albumlistwidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>AlbumWidget</class>
+   <extends>QWidget</extends>
+   <header>albumwidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
+ <resources/>
  <connections/>
 </ui>
